syntax = "proto3";
option java_package = "proto";
package proto;
//option java_multiple_files = true;

import "types.proto";

service blockchainService {
    // BLocking call for client!
    rpc addTransaction(Transaction) returns (accepted) {};
    // synchronized between servers!
//    rpc synchronzieOnError(stream Block) returns (stream Block) {}
//    rpc panic(PanicMsg) returns(empty) {};
}